ARROW-362: Remove redunant reference count

Change-Id: I7c9b6af682d569cf2a7c335b1da4fed39632eae9